# 19212_KHOMCHENKO

./: CMakeLists.txt  Class  HashTable.cpp  HashTable.h  Tests.cpp  main.cpp  цуа
BlackJack/: BlackJackLogic.cpp  BlackJackLogic.h  CMakeLists.txt  Card.cpp  Card.h  Deck.cpp  Deck.h  Easy1Strategy.cpp  Easy1Strategy.h  Easy2Strategy.cpp  Easy2Strategy.h  Easy3Strategy.cpp  Easy3Strategy.h  FileStream.cpp  FirstStr.cpp  FirstStr.h  Hard1Strategy.cpp  Hard1Strategy.h  Hard2Strategy.cpp  Hard2Strategy.h  Hard3Strategy.cpp  Hard3Strategy.h  ISerializable.h  N_deck.cpp  N_deck.h  Player.cpp  Player.h  SimpledDesk.cpp  SimpledDesk.h  Strategy.h  StrategyImp.h  Tests.cpp  blackjack.cpp  blackjack.h  blackjack.vcxproj  blackjack.vcxproj.filters  dealer.h  deck.cpp  deck.h  difficult.cpp  (+26 more)
FlatMap/: CMakeLists.txt  FlatMap.cpp  FlatMap.h  HashTable.cpp  HashTable.h  Tests.cpp
GameOfLife/: game.cpp  game.h  gameoflife.pro  gamewidget.cpp  gamewidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
HashTable/: CMakeLists.txt  HashTable.cpp  HashTable.h  Tests.cpp  main.cpp
TicTacToe/: AI.java  Assets.java  BoardPanel.java  CellButton.java  ConnectionPanel.java  MainMenuPanel.java  Move.java  PlayerThread.java  Program.java  Server.java  SwingView.java  Utils.java
befungeInt/: build.gradle  settings.gradle
befungeInt/programs/: factorial.txt  random.txt
hexxagon/: settings.gradle
parser-classfile/: ConstantBase.java  ConstantPool.java  Main.java
parser-classfile/basicinfo/: BasicInfo.java  FieldMethodInfo.java
parser-classfile/constant/: Constant.java
(+73 files in other folders)
